previous versions of arsperl and may require altering of some arsperl
scripts.


Released: 10/24/2001 Version: 1.72


(JCM)   modified Makefile.PL to handle changes to _SERVER_INFO definitions
        in 4.5.x

(JCM)   memory leak fixes

(JCM)   duplicate free badness in ars_Login() fixed

(JCM)   updated doc for ars_MergeEntry

(JCM)   added form->merge() call to OO layer


Released: 10/30/2000 Version: 1.71


(JCM)   modified support-h.template to compile against api3.0


Released: 9/21/2000 Version: 1.70


(JCM)   modified support-h.template to compile against api3.2

(JCM)   bug fix to ars_Import()


Released: 8/31/2000 Version: 1.69


(JCM)   added ars_SetServerInfo() call

(JCM)   added infra/pcpp.pl which is used to convert the xs
        and c files into something that will compile against
        activestate perl 5.6

(JCM)   modifications to Makefile.PL to ease win32 compilations

(JCM)   fixed bug in support.c:lookUpTypeName

(JCM)   enhanced ars_Export to handle all possible export types
        in whatever api we're compiled against

(JCM)   enhanced ars_Import to handle all possible import types
        in whatever api we're compiled against

(JCM)   typo fix in ARS.xs for perl5.6 compatibility

(JCM)   documenation update (ars_Import)


Released: 7/4/2000 Version: 1.68


(JCM)   modifications to example/ars_GetListEntry.pl to make
        it function with different revisions of the User form.

(JCM)   arsperl now requires at minimum perl 5.004.

(JCM)   converted "na" "sv_unref" to PL_ namespace. 
        added perl-version checking so it will still compile
        against 5.004.

(JCM) ! ars4.5 compatibility changes. the following functions
        have altered return values which will break scripts that
        use them _if you compile against 4.5 or later libraries_
   		
   		ars_GetActiveLink 
   		ars_GetFilter 
   		ars_GetEscalation 
   		ars_CreateActiveLink 
        
        see the documentation on the return values of these functions