@@ -38,7 +38,9 @@ in 4.5.x </font></td></tr>
 <tr bgcolor='#dddddd'><td width='10%'>(JCM)</td><td width='90%'><font color='black'>updated doc for ars_MergeEntry 
 </font></td></tr>
 <tr bgcolor='#eeeeee'><td width='10%'>(JCM)</td><td width='90%'><font color='black'>added form->merge() call to OO layer 
-</table></td></tr></table>
+</font></td></tr>
+<tr bgcolor='#dddddd'><td width='10%'>(JCM)</td><td width='90%'><font color='black'>fixed 4.5.2 induced warning (now there's a FilterActionStruct) 
+modified Makefile.PL so you can specify ARVERSION=4.52  </table></td></tr></table>
 
 <P>
 
@@ -988,4 +990,4 @@ Removed -lars from makefile (internal C library that wasn't released), not neede
 
 
 <P>
-<PRE>$Header: /cvsroot/arsperl/ARSperl/html/changes.html,v 1.13 2001/10/24 16:01:24 jcmurphy Exp $</PRE></body></html>
+<PRE>$Header: /cvsroot/arsperl/ARSperl/html/changes.html,v 1.14 2001/10/29 13:56:09 jcmurphy Exp $</PRE></body></html>
