@@ -25,6 +25,9 @@ Released: 10/24/2001 Version: 1.72
 
 (JCM)   added form->merge() call to OO layer
 
+(JCM)   fixed 4.5.2 induced warning (now there's a FilterActionStruct)
+        modified Makefile.PL so you can specify ARVERSION=4.52 
+
 
 Released: 10/30/2000 Version: 1.71
 
@@ -553,5 +556,5 @@ Released: 01/12/96 Version: 1.0beta
 
 arsperl@arsperl.org
 
-$Header: /cvsroot/arsperl/ARSperl/CHANGES,v 1.43 2001/10/24 16:01:24 jcmurphy Exp $
+$Header: /cvsroot/arsperl/ARSperl/CHANGES,v 1.44 2001/10/29 13:56:09 jcmurphy Exp $
 
